<package>
  <version>0.0.1</version>
  <name>prosilica_gige_sdk</name>
  <description>
  The PvAPI SDK from AVT (originally Prosilica) allows users to control and
  capture images from AVT's GigE Vision cameras. The ROS package automatically
  downloads and extracts a tarball, installs headers and libraries, and builds a
  few useful example programs.
  We currently use version 1.20 of the SDK, released 7 April 2009. It is known
  to work with version 1.36 of the AVT GigE Vision camera firmware. We will
  update the version for bugfixes and for new features we deem particularly
  useful to vision applications.
  </description>
  <license>BSD,Commercial</license>
  <maintainer email="stephan.wirth@uib.es">maintained by: Stephan Wirth</maintainer>
  <url>http://www.ros.org/wiki/prosilica_gige_sdk</url>

  <author>Allied Vision Technologies. ROS package maintained by William Woodall - wwoodall@willowgarage.com.</author>

  <buildtool_depend>catkin</buildtool_depend>
  <run_depend>catkin</run_depend>

</package>

